# mindmap-generator

./: 2025-08-28-RH.txt  AGENT_README.md  BREAKTHROUGH_REPORT.md  CLAUDE.md  CRITICAL_BUGS_FIXED.md  CRITICAL_DISCOVERY.md  CRITICAL_QUESTIONS.md  FINAL_BARRIER_REPORT.md  FINAL_CODE_REVIEW_SUMMARY.md  FRESH_EYES_REVIEW_COMPLETE.md  Makefile  NORMALIZATION_FIX_REPORT.md  PROBLEM_ANALYSIS_TEMPLATE.md  SYNERGISTIC_RESULTS.md  WARP.md  WEIL_RESULTS_SUMMARY.md  breakthrough_results.md  corrected_gaussian_hermite.py  debug_linearity_test.py  debug_psd_failure.py  dpss_fixed.py  dpss_scaled_synergy.py  extract_chat.py  final_validation.py  fourier_conventions.py  hello.py  infinity_conversation.md  infinity_network_3d.html  mindmap_generator.py  psd_3x3_calibrated.py  psd_3x3_verification.py  psd_scalable_hierarchical.py  pyproject.toml  requirements.txt  riemann_august_2025.md  riemann_barriers_breakthrough.html  sanity_checks.py  sigma_critical_region.py  simple_mindmap_generator.py  synergistic_proof.py  (+26 more)
certs/: autocorr.json  cauchy.json  cauchy_smoke.json  gaussian_progress.json  gaussian_smoke.json
docs/: 7 барьеров на пути к гипотезе Римана.md  Fundamental Barriers to the Proof of the Riemann Hypothesis A Technical Survey.md  Riemann Hypothesis Proof Barriers Analysis.txt  chat_conversations_2025-08-28T07-16-14.766Z_Exploring_20Mathematical_20Infinity.html  chat_conversations_2025-08-28T10-00-01.643Z_PSD_20Matrix_20Verification_20Methodology.html  compass_artifact_wf-bb194231-7e79-4edc-9a0c-70fbcb2dfa44_text_markdown.md  riemann_barriers_synergy_model.md  (+2 more)
src/: main.py  (+2 more)
(+30 files in other folders)
